<resources>
    <string name="title_activity_country">Edit Country</string>
    <string name="main">Countries</string>
    <string name="authorsHint">Avery Monsen</string>
    <string name="yearHint">June 30, 2010</string>
    <string name="genresHint">Comics, Humour</string>
    <string name="publisherHint">Chronicle Books</string>
    <string name="titleHint">All My Friends Are Dead</string>
    <string name="duplicated_message">An existing book already have this name</string>
    <string name="add_error_title">Book adding failure</string>
    <string name="empty_message">The given fields cannot be empty</string>
    <string name="create_error_message">Book saving failed</string>
</resources>
