<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".BookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/nameBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/titleHint"
                android:inputType="none"
                android:textColor="@color/textColorPrimary"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:editable="false" />

            <TextView
                android:id="@+id/labelAuthors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Auteur(s)"
                app:layout_constraintBaseline_toBaselineOf="@+id/editAuthors"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editAuthors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:enabled="true"
                android:hint="@string/authorsHint"
                android:inputType="textMultiLine"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/editYear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier2"
                app:layout_constraintTop_toBottomOf="@+id/nameBook"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/labelYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Année"
                app:layout_constraintBaseline_toBaselineOf="@+id/editYear"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:enabled="true"
                android:hint="@string/yearHint"
                android:inputType="textMultiLine"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/editGenres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier2"
                app:layout_constraintTop_toBottomOf="@+id/editAuthors" />

            <TextView
                android:id="@+id/labelGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Genre(s)"
                app:layout_constraintBaseline_toBaselineOf="@+id/editGenres"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:enabled="true"
                android:hint="@string/genresHint"
                android:inputType="textMultiLine"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/editPublisher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier2"
                app:layout_constraintTop_toBottomOf="@+id/editYear" />

            <TextView
                android:id="@+id/labelPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Éditeur"
                app:layout_constraintBaseline_toBaselineOf="@+id/editPublisher"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:enabled="true"
                android:hint="@string/publisherHint"
                android:inputType="textMultiLine"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier2"
                app:layout_constraintTop_toBottomOf="@+id/editGenres" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>